--- a/Conway's Game of Life/ConwayGame/ConwayGame.cbp
+++ b/Conway's Game of Life/ConwayGame/ConwayGame.cbp
@@ -32,6 +32,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Cell.cpp" />
+		<Unit filename="Cell.h" />
+		<Unit filename="Controller.cpp" />
+		<Unit filename="Controller.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
