Spell Checker Finished
Spell Checker now spell checks, and returns suggestions if one inputs a
word that is not in the dictionary.

--- a/Spell Checker/SpellChecker/SpellChecker.cbp
+++ b/Spell Checker/SpellChecker/SpellChecker.cbp
@@ -32,8 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Trie.cpp" />
-		<Unit filename="Trie.h" />
+		<Unit filename="SpellChecker.cpp" />
+		<Unit filename="SpellChecker.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
